BBC base layout done, need to fix some small spacing and vertically align header elements.

--- a/week4/class08-materials/layout3/css/style.css
+++ b/week4/class08-materials/layout3/css/style.css
@@ -21,8 +21,8 @@
 /* BASE STYLES
 /*******************************************/
 
-body {
-
+body > *{
+  padding: 0px 18%;
 }
 
 
@@ -58,11 +58,20 @@ nav a{
 }
 
 nav ul{
-   width: 50%; 
+   width: 65%; 
    list-style: none;
+   float: left;
+   padding:0px;
 }
 nav li {
   float: left;
+  width: 10%;
+  text-align: center;
+}
+
+
+nav form{
+  float: right;
 }
 
 nav form input{
@@ -75,28 +84,94 @@ section article{
 }
 
 main {
-  height: 500px;
+  height: 350px;
 }
 
 main > section{
-  width: 50%;
+  width: 49%;
   float:left;
-  border: 1px solid black;
   height: 100%;
 }
 
 main section section{
-  border: 1px solid black;
-  width: 50%;
+  width: 49%;
   float: left;
   height: 50%;
+}
+
+main section section:nth-last-child(-n+2){
+  margin-top: 1%;
+}
+
+main section section:nth-child(odd){
+  margin-right:2%;
+}
+
+main section section img{
+  width: 100%;
+  height: auto;
+}
+
+main section section h3, main section section span{
+  position:relative;
+  bottom: 5.5rem;
+  padding-left: 1rem;
+}
+
+.main-left{
+  /* background-image: url(../_123190761_jetinteriorwithsuperimposedplasma.jpg); */
+  margin-right: 1%;
+}
+
+.main-left img{
+  width: 100%;
+  height: 100%;
+}
+
+.main-left h1, .main-left p{
+  position:relative;
+  z-index: 2;
+  width: 100%;
+  bottom: 12.5rem;
+  padding-left: 1rem;
+}
+
+.main-left span{
+  position:relative;
+  z-index: 4;
+  width: 100%;
+  bottom: 12.5rem;
+  padding-left: 1rem;
+}
+
+.news > article{
+  width: 32%;
+  margin-right: 1%;
+  float:left;
+}
+
+.news > article img{
+  width: 100%;
+  height: auto;
 }
 
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
 
+/* Typography */
+a{
+  text-decoration: none;
+}
 
 .sign-in-logo{
   background-image: url(../idcta-icon-sprite.svg)
+}
+
+main h1, main h2, main p, main a, main span, main h3{
+  color: white;
+}
+
+.welcome{
+  color:black;
 }
